// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default multiple uses 1`] = `
"intl.formatMessage({
    defaultMessage: "hello",
    "id": "Users.username.repo.src.components.613153351"
});
intl.formatMessage({
    defaultMessage: "hello",
    "id": "Users.username.repo.src.components.613153351"
});
intl.formatMessage({
    defaultMessage: "some other message",
    "id": "Users.username.repo.src.components.831373691"
});
export { };
"
`;

exports[`default some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
var Component2 = function Component2() {
    var intl = useIntl();
    var label = intl.formatMessage({
        defaultMessage: "hello",
        "id": "Users.username.repo.src.components.613153351"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: "hello",
            "id": "Users.username.repo.src.components.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: "hello",
            "id": "Users.username.repo.src.components.613153351"
        })
    });
};
"
`;

exports[`default with FormattedMessage imported as something else 1`] = `
"intl.formatMessage({
    defaultMessage: "i18n",
    "id": "Users.username.repo.src.components.94348014"
});
export { };
"
`;

exports[`default with a value interpolated in the message 1`] = `
"intl.formatMessage({
    defaultMessage: "template string 2",
    "id": "Users.username.repo.src.components.1045198380"
});
export { };
"
`;

exports[`default with a variable as the defaultMessage 1`] = `
"var message = "variable message";
intl.formatMessage({
    defaultMessage: message,
    "id": "Users.username.repo.src.components.1304763199"
});
export { };
"
`;

exports[`default with a variable as the defaultMessage 2`] = `
"intl.formatMessage(messages);
export { };
"
`;

exports[`default with custom properties in formatMessage call 1`] = `
"intl.formatMessage({
    defaultMessage: "custom prop",
    other: 123,
    "id": "Users.username.repo.src.components.2983810267"
});
export { };
"
`;

exports[`default with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "Users.username.repo.src.components.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`default with useIntl hook imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello",
    "id": "Users.username.repo.src.components.613153351"
});
export { };
"
`;

exports[`default withKeyFlag 1`] = `
"intl.formatMessage({
    key: 'foobar',
    defaultMessage: 'hello',
    "id": "Users.username.repo.src.components.613153351"
});
export { };
"
`;

exports[`filebase = true with useIntl hook imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello",
    "id": "App.613153351"
});
export { };
"
`;

exports[`removePrefix = "src" with useIntl hook imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello",
    "id": "Users.username.repo.src.components.613153351"
});
export { };
"
`;

exports[`removePrefix = "src.__fixtures__" with useIntl hook imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello",
    "id": "Users.username.repo.src.components.613153351"
});
export { };
"
`;

exports[`removePrefix = "src/" -- with slash with useIntl hook imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello",
    "id": "Users.username.repo.src.components.613153351"
});
export { };
"
`;

exports[`removePrefix = /__fixtures__/ with useIntl hook imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello",
    "id": "Users.username.repo.src.components.613153351"
});
export { };
"
`;

exports[`removePrefix = false with useIntl hook imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello",
    "id": "Users.username.repo.src.components.613153351"
});
export { };
"
`;

exports[`useKey = true with useIntl hook imported 1`] = `
"intl.formatMessage({
    defaultMessage: "hello",
    "id": "Users.username.repo.src.components.613153351"
});
export { };
"
`;

exports[`useKey = true withKeyFlag 1`] = `
"intl.formatMessage({
    key: 'foobar',
    defaultMessage: 'hello',
    "id": "Users.username.repo.src.components.613153351"
});
export { };
"
`;
